[metadata]
name = pypei
version = 0.1.0a5
author = David Wu
author_email = dwu402@aucklanduni.ac.nz
description = Implementation of generalised profiling with CasADi
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dwu402/pypei
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires = 
    numpy >= 1.18.1
    scipy >= 1.4.1
    casadi >= 3.5.1
    sortedcontainers >= 2.4.0
